# ml-service

./: .env  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
src/: main.py  promt.txt
src/api/generation/: schemas.py  views.py
src/data/schemas/: alert.py  button.py  card.py  director.py  enums.py  generator.py
src/data/schemas/components/: __init__.py  alert.py  box.py  button.py  card.py  checkbox.py  dropdown.py  list.py  scrollbar.py  sidebar.py
src/data/schemas/examples/: Alert.json  Box.json  Button.json  Card.json  Checkbox.json  Dropdown.json  List.json  Scrollbar.json  Sidebar.json  Typography.json
src/data/schemas/models/: __init__.py  box.py  card.py  typography.py
src/data/schemas/ready-made-examples/: Alert.txt  Checkbox (1).txt  List.txt  Scrollbar.txt  Sidebar.txt  Typography.txt  box (1).txt  button.txt  card.txt  dropdown.txt
src/generators/: __init__.py  base.py  chatgpt.py  factory.py  gigachat.py  key.py  prompt.py  prompt_chatgpt_components.txt  prompt_chatgpt_css.txt  promt.txt  yandexgpt.py
src/generators/prompt/: gigachat_prompt.py  prompt_chatgpt.py  prompt_chatgpt_components.py  prompt_chatgpt_css.py
src/test/: main.py
src/test/ALert/: alert.json  requestsAlert.txt
src/test/box/: box.json  requestsBox.txt
src/test/button/: button.json  requestsButtob.txt
src/test/card/: card.json  requestsCard.txt
src/test/checkbox/: checkbox.json  requestsCheckbox.txt
