[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["nebaskov <nebaskov@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
