[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["nebaskov <nebaskov@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
requests = "^2.32.3"
PyJWT = "^2.9.0"
openai = "^1.44.1"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
